hphp/hack/test/typecheck/variadic_args4.php.exp
File "variadic_args4.php", line 7, characters 7-8:
This object is of type C2 (Typing[4042])
File "variadic_args4.php", line 7, characters 18-19:
It is incompatible with this object of type C1
because some declarations are incompatible.
Read the following to see why:
File "variadic_args4.php", line 8, characters 19-22:
Should have a variadic argument
File "variadic_args4.php", line 4, characters 19-22:
Because of this definition
